# MemPG

./: README.md  mempg.sh  setup.cfg
.github/workflows/: python-app.yml
mempg/: generators.py  main.py
mempg/wordlists/: adjective.txt  adverb.txt  noun.txt  preposition.txt  verb-continuous.txt  verb-present.txt  verb.txt
tests/: package.sh  test_generators.py
