[metadata]
name = mempg
version = 1.0
license = MIT
url = https:/github.com/initstring/mempg
author = initstring
author_email = 26131150+initstring@users.noreply.github.com

[options]
packages = mempg
install_requires =
    requests

[options.entry_points]
console_scripts =
    mempg = mempg.main:main
